--- a/scss/components/_texts.scss
+++ b/scss/components/_texts.scss
@@ -1,11 +1,13 @@
 /*index html*/
-.mainIndex{
-    span{
+.mainIndex {
+    span {
         font-size: 1rem;
     }
-    p{
+
+    p {
         font-size: 0.8rem;
-        a{
+
+        a {
             margin-left: 0.1rem;
             color: $jazzy;
         }
@@ -59,5 +61,35 @@
         text-align: justify;
         font-size: 1rem;
         line-height: 2.5rem;
+    }
+}
+
+/*registro.html*/
+.registro {
+    .formulario {
+        p {
+            color: $text;
+            font-size: 1rem;
+            line-height: 2.5rem;
+            a{
+                color: $jazzy;
+            }
+        }
+    }
+
+    .beneficios {
+        p {
+            color: $text;
+            text-align: center;
+            font-size: 1rem;
+            line-height: 2.5rem;
+
+        }
+
+        #exitoso {
+            color: $jazzy;
+            text-align: center;
+            font-size: 3rem;
+        }
     }
 }
