--- a/scss/components/_boxes.scss
+++ b/scss/components/_boxes.scss
@@ -15,43 +15,49 @@ main {
     height: 50vh;
     width: 90vw;
 
-    .bienvenidos{
+    .bienvenidos {
         display: flex;
         align-items: center;
         flex-direction: column;
         width: 65%;
         height: 80%;
-        .btnPedidos{
+
+        .btnPedidos {
             width: 50vw;
             display: flex;
             justify-content: center;
         }
     }
-    .formulario#acceso{
+
+    .formulario#acceso {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         width: 30%;
         height: 80%;
-        h2{
+
+        h2 {
             margin-bottom: 3vh;
         }
-        form div{
+
+        form div {
             display: flex;
             justify-content: center;
             margin-bottom: 1.5vh;
         }
-        }
-        input#btnLogin{
-            align-items: center;
-            margin: 1.5vh 0vh 1.5vh 0vh;
-        }
-        p{
-            display: flex;
-            justify-content: center; 
-        }
     }
+
+    input#btnLogin {
+        align-items: center;
+        margin: 1.5vh 0vh 1.5vh 0vh;
+    }
+
+    p {
+        display: flex;
+        justify-content: center;
+    }
+}
 
 
 /*conocenos.html*/
@@ -89,7 +95,8 @@ main {
             flex-direction: column;
             justify-content: space-between;
             align-items: center;
-            img{
+
+            img {
                 border-radius: 10px;
             }
         }
@@ -98,9 +105,11 @@ main {
 
 .cuencos {
     @extend .mates;
-    .boxCuencos{
+
+    .boxCuencos {
         @extend .boxMates;
-        .cardCuencos{
+
+        .cardCuencos {
             @extend .cardMates;
         }
     }
@@ -137,6 +146,41 @@ main {
             flex-direction: column;
             align-items: flex-end;
             justify-content: flex-end;
+        }
+    }
+}
+
+.registro {
+
+    h2 {
+        display: flex;
+        justify-content: center;
+    }
+
+    section {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        .formulario{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            #btnRegistro{
+                margin: 1.5rem
+            }
+        }
+        .beneficios{
+            width: 40vw;
+            height: 40vh;
+            margin-left: 5vw;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            p{
+                margin-top: 3vh;
+            }
         }
     }
 }
