--- a/scss/components/_tittles.scss
+++ b/scss/components/_tittles.scss
@@ -33,8 +33,9 @@ h2 {
         align-items: center;
         justify-content: center;
     }
-    #acceso{
-        h2{
+
+    #acceso {
+        h2 {
             font-size: 1.5rem;
         }
     }
@@ -45,9 +46,10 @@ h2 {
 }
 
 .sabias {
-    h1{
+    h1 {
         width: 90vw;
     }
+
     h2 {
         width: 90vw;
         padding: 1rem;
@@ -96,6 +98,19 @@ h2 {
             margin-bottom: 1vh;
             font-weight: 400;
             color: $jazzy;
+        }
+    }
+}
+
+.registro {
+    section {
+        .formulario {
+            h3 {
+                font-size: 1.5rem;
+                margin-bottom: 1vh;
+                font-weight: 400;
+                color: $jazzy;
+            }
         }
     }
 }
