--- a/scss/layout/_grids.scss
+++ b/scss/layout/_grids.scss
@@ -37,3 +37,10 @@
                          "footer";
     grid-template-rows: 0.5fr 3fr 0.5fr;
 }
+.estructuraRegistro {
+    display: grid;
+    grid-template-areas: "header"
+                         "main"
+                         "footer";
+    grid-template-rows: 0.5fr 3fr 0.5fr;
+}
