--- a/scss/components/_texts.scss
+++ b/scss/components/_texts.scss
@@ -93,3 +93,15 @@
         }
     }
 }
+
+/* tienda */
+.vacio{
+    margin: 2rem;
+    font-size: 1.5rem;
+    font-style: italic;
+}
+
+#precioTotal{
+    font-size: 1.2rem;
+    font-weight: 800;
+}
