--- a/scss/variables/_colors.scss
+++ b/scss/variables/_colors.scss
@@ -23,7 +23,10 @@ $backfooter: rgba(203, 191, 191, 0.6117647059);
 $backcards: rgba(255, 99, 51, 0.3215686275);
 
 /*menu background-color*/
-$backmenu: rgba(184, 35, 18, 0.8431372549);
+$backmenu: rgba(184, 35, 18, 0.733);
 
 /*hover boton enviar*/
 $hoversend: rgba(255, 99, 51, 0.5215686275);
+
+/*icono tienda*/
+$tienda: rgba(128, 128, 128, 0.555);
