--- a/scss/style.css
+++ b/scss/style.css
@@ -9,6 +9,7 @@
 /*cards background-color*/
 /*menu background-color*/
 /*hover boton enviar*/
+/*icono tienda*/
 /*tipos de fuentes de la web*/
 /*fuente general de la web*/
 /*fuente cursiva para titulos*/
@@ -82,6 +83,12 @@ header div img {
 }
 header nav {
   width: 97vw;
+}
+header nav #shop {
+  height: 15vh;
+  width: 60vw;
+  justify-content: flex-end;
+  color: rgba(128, 128, 128, 0.555);
 }
 header nav ul {
   display: flex;
@@ -269,6 +276,76 @@ main {
   margin-top: 3vh;
 }
 
+/*Selec tienda*/
+.contentModal {
+  width: 50vw;
+  max-height: 55vh;
+  position: absolute;
+  margin: 23vh 7.7vw;
+  top: 0;
+  right: 0;
+  background-color: rgba(184, 35, 18, 0.733);
+  color: #EBDBC9;
+  border-radius: 10px;
+  display: none;
+  z-index: 100;
+}
+.contentModal .modalBody {
+  overflow-y: scroll;
+  scroll-behavior: smooth;
+  scrollbar-width: thin;
+}
+.contentModal .modalBody .resumen {
+  margin: 1rem;
+  padding: 1rem;
+  display: flex;
+  flex-direction: row;
+  align-content: space-around;
+}
+.contentModal .modalBody .resumen img {
+  width: 8vw;
+  margin-right: 3vw;
+  border-radius: 5px;
+}
+.contentModal .modalBody .resumen div {
+  margin: 1vh 0vw vh 0vw;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.contentModal .modalBody .resumen div p {
+  margin-right: 1vw;
+}
+.contentModal .modalBody .resumen div i {
+  color: #EBDBC9;
+  margin-right: 1vw;
+}
+.contentModal .modalBody .resumen div .canti {
+  display: flex;
+  flex-direction: row;
+}
+
+.modalBody::-webkit-scrollbar {
+  width: 7px;
+}
+
+.modalBody::-webkit-scrollbar-thumb {
+  background-color: #EBDBC9;
+  border-radius: 5px;
+}
+
+#store:checked ~ .contentModal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#store:not(:checked) ~ .contentModal {
+  display: none;
+}
+
 /*estilos de todas las etiquetas h*/
 h1 {
   width: 90vw;
@@ -430,6 +507,18 @@ h2 {
   color: #FF6333;
   text-align: center;
   font-size: 3rem;
+}
+
+/* tienda */
+.vacio {
+  margin: 2rem;
+  font-size: 1.5rem;
+  font-style: italic;
+}
+
+#precioTotal {
+  font-size: 1.2rem;
+  font-weight: 800;
 }
 
 /*estilos de todo lo relacionado con fotos y videos*/
@@ -604,7 +693,8 @@ h2 {
   background: rgba(255, 99, 51, 0.5215686275);
 }
 
-.btnComprar {
+/* tienda */
+.btnAddCart {
   padding: 10px;
   font-size: 16px;
   border: none;
@@ -615,8 +705,66 @@ h2 {
   cursor: pointer;
   transition: all 300ms ease;
 }
-.btnComprar:hover {
+.btnAddCart:hover {
   background: rgba(255, 99, 51, 0.5215686275);
+}
+
+#storeIco {
+  cursor: pointer;
+}
+#storeIco:hover {
+  color: rgba(255, 99, 51, 0.5215686275);
+}
+
+#store {
+  display: none;
+}
+
+#vaciarCarrito {
+  margin: 3vh 1.5vw 1.5vh 1.5vw;
+  padding: 10px;
+  font-size: 16px;
+  border: none;
+  outline: 0;
+  background: #EBDBC9;
+  color: #FF6333;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 300ms ease;
+}
+
+#finCompra {
+  margin: 3vh 1.5vw 1.5vh 1.5vw;
+  padding: 10px;
+  font-size: 16px;
+  border: none;
+  outline: 0;
+  background: #EBDBC9;
+  color: #FF6333;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 300ms ease;
+}
+
+#eliminar {
+  background: none;
+  border: none;
+  align-items: center;
+  cursor: pointer;
+}
+
+#sumar {
+  background: none;
+  border: none;
+  align-items: center;
+  cursor: pointer;
+}
+
+#restar {
+  background: none;
+  border: none;
+  align-items: center;
+  cursor: pointer;
 }
 
 footer {
@@ -739,7 +887,7 @@ footer nav ul li a:hover {
     right: 0;
     height: 50vh;
     width: 35vw;
-    background-color: rgba(184, 35, 18, 0.8431372549);
+    background-color: rgba(184, 35, 18, 0.733);
     border-radius: 10px;
     color: #EBDBC9;
     z-index: 9999;
