actualización con logica js terminada

--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,5 +1,5 @@
 .btnPedidos {
-    padding: 8%;
+    padding: 8% 5% 3% 5%;
 
     button {
         padding: 1rem;
@@ -129,20 +129,6 @@
 }
 
 #eliminar{
-    background:none;
-    border:none;
-    align-items: center;
-    cursor: pointer;
-}
-
-#sumar{
-    background:none;
-    border:none;
-    align-items: center;
-    cursor: pointer;
-}
-
-#restar{
     background:none;
     border:none;
     align-items: center;
